Real mimic whole data structure from Smart Proxy
