# openapi.json
@@ -970,18 +970,50 @@
                             "alerts": {
                               "type": "array",
                               "items": {
-                                "type": "string",
-                                "minimum": 0
+                                "minimum": 0,
+                                "type": "object",
+                                "properties": {
+                                  "name": {
+                                    "type": "string"
+                                  },
+                                  "namespace": {
+                                    "type": "string"
+                                  },
+                                  "severity": {
+                                    "type": "string"
+                                  }
+                                }                                
                               }
                             },
                             "operator_conditions": {
                               "type": "array",
                               "items": {
-                                "type": "string",
-                                "minimum": 0
+                                "minimum": 0,
+                                "type": "object",
+                                "properties": {
+                                  "name": {
+                                    "type": "string"
+                                  },
+                                  "condition": {
+                                    "type": "string"
+                                  },
+                                  "reason": {
+                                    "type": "string"
+                                  }
+                                }
                               }
                             }
                           }
+                        }
+                      }
+                    },
+                    "meta": {
+                      "type": "object",
+                      "properties": {
+                        "last_checked_at": {
+                          "type": "string",
+                          "format": "date",
+                          "example": "2020-01-23T16:15:59.478901889Z"
                         }
                       }
                     }
